clean up a bunch of todos from A.4

--- a/powerops.tex
+++ b/powerops.tex
@@ -120,8 +120,7 @@ which on homotopy groups is made up of a product of the cohomology rings $E^*(B\
 One of the first places these ideas appear in the literature is in work of Mahowald and Thompson.  Bousfield defined an unstable local homotopy type associated to a (simply-connected) space and a homology theory.  In the case of the space $S^{2n-1}$ and $p$--adic $K$--theory, Mahowald and Thompson calculated that $L_K S^{2n-1}$ appears as the homotopy fiber \[L_K S^{2n-1} \to L_K \Loops^\infty \Sigma^\infty S^{2n-1} \to L_K \Loops^\infty \Sigma^\infty ((S^{2n-1})^{\sm p}_{h\Sigma_p}),\] which is an abbreviated form of the monadic resolution described above.
 \end{remark}
 
-\begin{remark}
-\citeme{This should be in...Charles's work?}
+\begin{remark}[{\cite[Theorem 4.5]{GoerssHopkins}}]
 In general, if $E^* B\Sigma_j$ is sufficiently nice, then the the $E^2$--page of the monadic descent spectral sequence computes the derived functors of derivations, taken in a suitable category of monad-algebras for the monad specifying the behavior of power operations.
 \end{remark}
 
@@ -539,7 +538,7 @@ The category of Dieudonn\'e modules with quasi-isogenies inverted becomes semisi
 The names supersingular and ordinary are partially explained by the following result, which says that ordinary curves form the generic case and that supersingular curves are comparatively very rare:
 
 \begin{lemma}
-The supersingular locus of $\moduli{ell}$ is $0$--dimensional.  In fact, it is the zero-locus of a polynomial of degree $\lfloor (p-1)/12 \rfloor + \{0, 1, 2\}$. \qed
+The supersingular locus of $\moduli{ell}$ is $0$--dimensional.  In fact, it is the zero-locus of a polynomial of degree less than $\lfloor (p-1)/12 \rfloor + 3$. \qed
 \end{lemma}
 
 \noindent We write $i\co \moduli{ell}^{\ord} \to \moduli{ell}$ for the open inclusion of the ordinary locus.  We then plan to recover a topological enrichment by constructing the pieces of the following pullback:
@@ -558,7 +557,7 @@ This decomposition is compatible with the perspective on homotopy theory taken u
 
 \subsection*{The supersingular locus}
 
-Our task in this section is to define $\sheaf O^{\ss}$ on $\widehat{\moduli{ell}^{\ss}}$, the supersingular part of the topological enrichment, and it suffices to specify its behavior on formal \'etale affines.  Since the moduli is itself $0$--dimensional, these are exactly the affine covers of the deformation spaces of the supersingular curves in the larger moduli $\moduli{ell}$.  The following arithmetic result gives us a crucial reduction:
+Our task in this section is to define $\sheaf O^{\ss}$ on $\widehat{\moduli{ell}^{\ss}}$, the infinitesimal neighborhood of the supersingular part of the topological enrichment in the larger moduli, and it suffices to specify its behavior on formal \'etale affines.  Since the moduli is itself $0$--dimensional, these are exactly the affine covers of the deformation spaces of the individual supersingular curves in the larger moduli $\moduli{ell}$.  The following arithmetic result gives us a crucial reduction:
 
 \begin{theorem}[{Serre--Tate~\cite[Appendix 1]{KatzSTLocalModuli}}]
 The map $\moduli{ell} \to \moduli{pdiv}(2)$ is formally \'etale, where $\moduli{pdiv}(2)$ is the moduli of $p$--divisible groups of height $2$.\footnote{In general, the Serre--Tate theorem states that $\moduli{ab}^{d} \to \moduli{pdiv}(2d)$ is formally \'etale.} \qed
@@ -588,7 +587,7 @@ This buys more than just a bouquet of Morava $E$--theories, or even the global s
 \subsection*{The ordinary locus}
 
 We now turn to the ordinary locus, which constitutes the bulk of the problem: remember that the supersingular locus was essentially discrete, and we are setting out to construct a sheaf, which means that we will be manufacturing a \emph{lot} of spectra.  The main tool for analyzing this situation is a specialization of the obstruction theory of Goerss--Hopkins--Miller.  First, note that completed $p$--adic $K$--homology (i.e., continuous Morava $E$--theory for $\G_m$) carries an action by $\Aut \G_m$, and using the results of \Cref{PowerOpnsSection} this extends to an action by $\End \G_m$ using the $p${\th} power operation.  In turn, the completed $p$--adic $K$--homology of an $E_\infty$ ring spectrum carries an action by $\End \G_m$, which is sometimes referred to as the structure of a \index{theta algebra@$\theta$--algebra}\textit{$\theta$--algebra}.  To be more explicit:
-\begin{theorem}[McClure]
+\begin{theorem}[{\cite{McClure}}]
 The homotopy of a $K(1)$--local commutative $K_p$--algebra spectrum $R$, such as $\widehat L_1 (K_p \sm E)$, carries an extra family of ring operations $\psi^k$ indexed on $k \in \Z_p$, as well as a ring map $\theta$,\footnote{If $E_*$ is torsion-free, then the last condition means that $\theta$ is redundant.} such that
 \pushQED{\qed}
 \begin{align*}
@@ -627,8 +626,8 @@ In order to apply this theorem, we need a guess as to what $\theta$--algebra sho
 
 \begin{center}
 \begin{tikzcd}
-\cdots \arrow{r} & \Spf W_1 \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \Spf V^\wedge_\infty \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \Spf \Z_p \arrow["{\text{f.\'e.}}"]{d} \\
-\cdots \arrow{r} & \moduli{ell}^{\ord}(p^1) \arrow{r} & \moduli{ell}^{\ord} \arrow{r} & \moduli{fg}.
+\cdots \arrow{r} & \Spf W_1 \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \Spf V^\wedge_\infty \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \Spf \Z_p \arrow["{\text{f.\'e.}}"]{d} & \\
+\cdots \arrow{r} & \moduli{ell}^{\ord}(p^1) \arrow{r} & \moduli{ell}^{\ord} \arrow{r} & \moduli{fg}. &
 \end{tikzcd}
 \end{center}
 
@@ -643,7 +642,7 @@ C[p]\arrow{r} & C \arrow["p"]{r} & C^{(p)}
 \]
 Unfortunately, this $\theta$--algebra is not nice enough to apply the Goerss--Hopkins--Miller theorem.  In order to fix this, it becomes convenient to work at $p \ge 5$ for simplicity, and we then pass to a slightly more rigid moduli: we introduce a formal $(\Z/p)$--level structure, i.e., an isomorphism $\Z/p \cong (\widehat C)[p]$.  This \'etale $(\Z/p)^\times$--cover of $\moduli{ell}^{\ord}$ has the following exceptional property:
 
-\begin{lemma}[Igusa]\citeme{Igusa}
+\begin{lemma}[{\cite[Theorem 2.9.4]{Hida}}]\citeme{Lemma 5.2 of Behrens}
 For $p \ge 5$, the moduli $\moduli{ell}^{\ord}(p)$ is \emph{affine}. \qed
 \end{lemma}
 
@@ -737,7 +736,7 @@ For $\sheaf O$ a topological enrichment of an appropriate map $\stack N \to \mod
 This spectral sequence is isomorphic to the $MU$--Adams spectral sequence for $\sheaf O(\stack N)$.
 \end{lemma}
 \begin{proof}[Main observation]
-Consider the \v{C}ech complex associated to the affine cover $\moduli{Weier} \to \moduli{ell}$.  We claim that the complex making up the $E_1$--term of the descent spectral sequence is isomorphic to the complex making up the $E_1$--term of the $MU$--Adams spectral sequence.  To illustrate, we compute the first two terms of each and compare them.
+Consider the \v{C}ech complex associated to the affine cover \[\moduli{Weier} \to \moduli{ell}.\]  We claim that the complex making up the $E_1$--term of the descent spectral sequence is isomorphic to the complex making up the $E_1$--term of the $MU$--Adams spectral sequence.  To illustrate, we compute the first two terms of each and compare them.
 \begin{enumerate}
     \item Consider the pullback diagram of stacks
     \begin{center}
@@ -748,10 +747,6 @@ Consider the \v{C}ech complex associated to the affine cover $\moduli{Weier} \to
     \end{center}
     In the same stroke, this is also the pullback diagram computing $\Spec MU_* \TMF$.
     \item Now consider the pair of cubes of iterated pullbacks pictured in \Cref{HypercubesFigure}.  These compute the pullback of the cube in two different ways, producing an isomorphism $\moduli{Weier.trans.} \cong (\moduli{fg} \times \moduli{ps}^{\mathrm{gpd}}) \times_{\moduli{fgl}} \moduli{Weier}$.
-    \item[$n$.] The general case is similar, but requires stomaching iterated pullbacks in $n$--cubes. \qedhere
-\end{enumerate}
-\end{proof}
-
 \begin{figure}
     \begin{center}
     \begin{tikzcd}[column sep=-1.2em]
@@ -769,6 +764,9 @@ Consider the \v{C}ech complex associated to the affine cover $\moduli{Weier} \to
     \end{center}
     \caption{Two expressions of the same cubical pullback.}\label{HypercubesFigure}
 \end{figure}
+    \item[$n$.] The general case is similar, but requires stomaching iterated pullbacks in $n$--cubes. \qedhere
+\end{enumerate}
+\end{proof}
 
 \begin{example}
 We now appeal to basic results about $\moduli{ell} \times \Spec \Z[1/6]$ to compute $\pi_* TMF[1/6]$ using these methods.\footnote{This is admittedly a rather elaborate way of recovering the homotopy of the \emph{complex-orientable} ring spectrum $\TMF[1/6]$.}  After inverting $2$ and $3$, we can use scaling and translation transformations to complete both the cube and the square, replacing an arbitrary Weierstrass curve with a \emph{unique} one of the form $y^2 = x^3 + c_4 x + c_6$.  This exhausts the morphisms in the groupoid $\moduli{ell}$: the map \[\Spec \Z[c_4, c_6, \Delta^{-1}][1/6] \to \moduli{ell} \times \Spec \Z[1/6]\] is an equivalence of stacks (cf.\ \Cref{MFRemark}).  Since the quasicoherent sheaf cohomology of affines is always amplitude $0$, this spectral sequence is concentrated on the $0$--line, and we recover \[\pi_* \TMF[1/6] \cong \Z[c_4, c_6, \Delta^{-1}][1/6].\]
@@ -802,8 +800,7 @@ We now recount a more modern take on the story of the $\sigma$--orientation whic
 \end{tikzcd}
 \end{center}
 analogous to the adjunction between the group of units and the group-ring constructions in classical algebra.  Its relevance to us is its participation in the theory of highly structured Thom spectra.  Let $j\co g \to \gl_1 \S$ be a map of connective spectra, begetting a map $J\co G \to \GL_1 \S$ of infinite loopspaces, where we have written $G = \Loops^\infty g$.
-\begin{lemma}
-\citeme{May? or ABGHR?}
+\begin{lemma}[{\cite[Section 4]{ABGHR}, \cite[Section IV.2]{MayRingSpacesSpectra}}]
 The Thom spectrum of the map $BJ$ is presented by the pushout of $E_\infty$ rings\footnote{This is a kind of ``twisted group-ring'' construction.}
 \begin{center}
 \begin{tikzcd}
@@ -814,8 +811,7 @@ The Thom spectrum of the map $BJ$ is presented by the pushout of $E_\infty$ ring
 \qed
 \end{lemma}
 
-\begin{corollary}
-\citeme{May, but also ABGHR}
+\begin{corollary}[{\cite[Section 4]{ABGHR}, \cite[Section IV.3]{MayRingSpacesSpectra}}]
 There is a natural equivalence between the space of null-homotopies of the composite \[g \xrightarrow j \gl_1 \S \xrightarrow{\gl_1 \eta_R} \gl_1 R\] and the space of $E_\infty$ ring maps $MG \to R$, where $MG$ is the Thom spectrum of the stable spherical bundle classified by $J$.
 \end{corollary}
 \begin{proof}
@@ -836,8 +832,7 @@ We can reidentify each of the three terms to get
 hence $E_\infty(MG, R)$ appears as the fiber at $\gl_1 \eta_R$ of the restriction map, which coincides with the space of nullhomotopies as claimed.
 \end{proof}
 
-\begin{corollary}
-\citeme{AHR}
+\begin{corollary}[{\cite[Section 2.3]{AHR}}]
 The mapping set $E_\infty(Mj, R)$ is nonempty if and only if $\gl_1 \eta_R \circ j$ is null-homotopic.  If this is the case, then $E_\infty(Mj, R)$ is a torsor for $[\Susp g, \gl_1 R]$. \qed
 \end{corollary}
 
@@ -851,6 +846,9 @@ M\Spin \arrow[densely dotted]{r} \arrow[bend left=15]{rr} \arrow{rrd} \arrow{rd}
 So, we seek a pair of $E_\infty$ ring maps into the rationalization and the $p$--completion of $KO$ which agree on the $p$--local ad\`eles, which involves understanding not just the mapping spaces but also the pushforward maps between them.
 
 
+
+
+
 \subsubsection{Rational orientations}
 
 We begin with the two rational nodes in the pullback diagram.  As a first approximation to our goal, consider the problem of giving a complex orientation $MU \to \Q \otimes R$ of a rational ring spectrum $\Q \otimes R$.  There is an automatic such orientation granted by
@@ -862,7 +860,7 @@ MU \arrow[densely dotted, "D"]{r} \arrow{rd} & \Q \otimes R \\
 \end{center}
 constructed out of the unit map $\S \to MU$, the unit map $\S \to \Q \otimes R$, the rationalization map $S \to \Q \otimes \S \cong H\Q$, and the standard additive orientation $MU \to H\Q$ of an Eilenberg--Mac Lane spectrum.  When $E_\infty(MU, T)$ is nonempty, it is a torsor for $[bu, \gl_1 T]$, and since we have a preferred orientation $D$ we thus have isomorphisms \[\pi_0 E_\infty(MU, \Q \otimes R) \xleftarrow{\cong} [bu, \gl_1 \Q \otimes R] \xleftarrow{\cong} [bu, \Q \otimes \gl_1 R] \xrightarrow{\cong} [\Q \otimes bu, \Q \otimes \gl_1 R],\] the last of which is specified by a sequence of rational numbers $(t_{2k})_{k \ge 1}$.  The role played by the sequence $(t_{2k})$ is to perturb the Thom class.
 
-\begin{lemma}
+\begin{lemma}[{\cite[Proposition 3.12]{AHR}}]
 Write $x$ for the Thom class of $\L$ on $\CP^\infty$ in $(\Q \otimes R)$--cohomology as furnished by the automatic orientation $D$.  The Thom class associated to some other orientation of $\Q \otimes R$ is tracked by a difference series $x / \exp_F(x)$, and the sequence $(t_k)$ above is expressed by $x / \exp_F(x) = \exp(\sum_k t_k/k! \cdot x^k)$.
 \end{lemma}
 \begin{proof}[Proof sketch]
@@ -884,28 +882,50 @@ This discussion accounts for both $E_\infty(M\Spin, \Q \otimes KO)$ and $E_\inft
 
 
 \subsubsection{Finite place orientations}\label{FinitePlaceOrientationsSubsection}
-\newcommand{\spin}{\mathit{spin}}
 
 We want now to understand $E_\infty(M\Spin, KO_p)$ and its map to $E_\infty(M\Spin, \Q \otimes KO_p)$.  Here's the initial set-up:
 \begin{center}
-\begin{tikzcd}
-\spin \arrow{r}[description]{j} & \gl_1 \S \arrow{r} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & Cj \arrow[densely dotted, "A"']{d} \\
-& & \gl_1 KO_p.
+\begin{tikzcd}[
+execute at end picture={
+    \coordinate (glS) at (glS.center);
+    \coordinate (Cj) at (Cj.center);
+    \coordinate (glKOp) at (glKOp.center);
+    \fill[red,opacity=0.3] 
+        (glS) -- (Cj) -- (glKOp) -- cycle;
+    \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize $A$};
+}]
+\spin \arrow{r}[description]{j} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d} \\
+& & |[alias=glKOp]| \gl_1 KO_p.
 \end{tikzcd}
 \end{center}
 We are looking to understand the space of filler diagrams $A$ (i.e., vertical maps with choice of homotopy of the precomposite to $\gl_1 \eta_{KO_p}$).  Notice first that there is a natural cofiber sequence to be placed on the bottom row:
-\todo{I don't like the placing of this $A$. I want it to indicate a choice of filler.}
 \begin{center}
-\begin{tikzcd}[column sep=1em]
-\spin \arrow{r}[description]{j} \arrow[red]{rd} & \gl_1 \S \arrow{r} \arrow[red]{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & Cj \arrow[densely dotted, "A"']{d} \\
-& \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p.
+\begin{tikzcd}[column sep=1em,
+execute at end picture={
+    \coordinate (glS) at (glS.center);
+    \coordinate (Cj) at (Cj.center);
+    \coordinate (glKOp) at (glKOp.center);
+    \fill[black,opacity=0.2] 
+        (glS) -- (Cj) -- (glKOp) -- cycle;
+    \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize $A$};
+}]
+\spin \arrow{r}[description]{j} \arrow[red]{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow[red]{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d} \\
+& \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p.
 \end{tikzcd}
 \end{center}
 There is a canonical red vertical lift of $\gl_1 \eta_{KO_p}$ since $\gl_1 \S$ is a torsion spectrum, and this precomposes with $j$ to give another vertical map.  Notice now that selecting a filler triangle $A$ gives a commuting square with choice of homotopy and that $[\gl_1 \S, \Q \otimes \gl_1 KO_p] = 0$, and hence we would get a natural map (and natural homotopy) off of the homotopy cofibers:
 \begin{center}
-\begin{tikzcd}[column sep=1em]
-\spin \arrow{r}[description]{j} \arrow{rd} & \gl_1 \S \arrow{r} \arrow{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & Cj \arrow[densely dotted, "A"' near start]{d}[description]{B} \arrow{r} & b\spin \arrow{r} \arrow{rd} \arrow[densely dotted]{d}[description]{C}& b\gl_1 \S \arrow{d} \\
-& \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p,
+\begin{tikzcd}[column sep=1em,
+execute at end picture={
+    \coordinate (glS) at (glS.center);
+    \coordinate (Cj) at (Cj.center);
+    \coordinate (glKOp) at (glKOp.center);
+    \fill[black,opacity=0.2] 
+        (glS) -- (Cj) -- (glKOp) -- cycle;
+    \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize $A$};
+}]
+\spin \arrow{r}[description]{j} \arrow{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d}[description]{B} \arrow{r} & b\spin \arrow{r} \arrow{rd} \arrow[densely dotted]{d}[description]{C}& b\gl_1 \S \arrow{d} \\
+& \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p,
 \end{tikzcd}
 \end{center}
 where $C$ is a map making the triangle it belongs to commute.  This all gives a function assigning $A$ to $B$ and $A$ to $C$ (and, in fact, the latter assignment factors through the former).
@@ -982,12 +1002,20 @@ The effect of this sequence of steps is \[t_{4k} = (1 - c^k)^{-1} b_{4k} (1 - p^
 
 \begin{sidewaysfigure}
 \centering
-\begin{tikzcd}[column sep=0em]
+\begin{tikzcd}[column sep=0em,
+execute at end picture={
+    \coordinate (glS) at (glS.center);
+    \coordinate (Cj) at (Cj.center);
+    \coordinate (glKOp) at (glKOp.center);
+    \fill[black,opacity=0.2] 
+        (glS) -- (Cj) -- (glKOp) -- cycle;
+    \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:1.5)}]Cj) {\scriptsize $A$};
+}]
 & & & \widehat L_1 \S \arrow{rr} \arrow[equal]{d} & & KO_p \arrow[equal]{d} \arrow["1 - \psi^c"]{rr} & & KO_p \arrow[equal]{d} \\
 & & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[densely dotted, "B'" near start]{dd} \arrow{rr} & & \widehat L_1 b\spin \\
-\spin \arrow{rr}[description]{j} \arrow{rrdd} & & \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & Cj \arrow{ru} \arrow[densely dotted, "A"' near start]{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
+\spin \arrow{rr}[description]{j} \arrow{rrdd} & & |[alias=glS]| \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & |[alias=Cj]| Cj \arrow{ru} \arrow{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
 & & & & & \widehat L_1 \gl_1 KO_p \arrow{rr} & & \Q \otimes \widehat L_1 \gl_1 KO_p \\
-& & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{rr} & & \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over]{uu}[description]{C} & & \Q/\Z \otimes \gl_1 KO_p.
+& & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{rr} & & |[alias=glKOp]| \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over]{uu}[description]{C} & & \Q/\Z \otimes \gl_1 KO_p.
 \end{tikzcd}
 \caption{A diagram showing the interconnections among the main components of the $p$--primary part of the Ando--Hopkins--Rezk argument.}\label{MainAHRDiagram}
 \end{sidewaysfigure}
