--- a/preamble.tex
+++ b/preamble.tex
@@ -214,6 +214,7 @@
 \newcommand{\Tr}{\mathrm{Tr}}
 \newcommand{\Cart}{\mathrm{Cart}}
 \newcommand{\tr}{\mathrm{tr}}
+\newcommand{\spin}{\mathit{spin}}
 \newcommand{\EinftyRings}{E_\infty\CatOf{RingSpectra}}
 
 \DeclareMathOperator{\im}{im}
