switch to using \tag

--- a/mo.tex
+++ b/mo.tex
@@ -102,12 +102,12 @@ As $MO$--modules, \[MO \sm MO \simeq MO \sm \Susp^\infty_+ BO.\]
 \begin{proof}
 Stringing together the naturality properties of the Thom functor outlined above, we can thus make the following calculation:
 \begin{align*}
-T(\mu \circ (J_{\R} \times J_{\R})) & \simeq T(\mu \circ (J_{\R} \times J_{\R}) \circ \sigma) & \text{(homotopy invariance)} \\
-& \simeq T(J_{\R} \times 0) & \text{(constructed lift)} \\
-& \simeq T(J_{\R}) \sm T(0) & \text{(monoidality)} \\
-& \simeq T(J_{\R}) \sm \Susp^\infty_+ BO & \text{(\Cref{TrivialBundleThomExample})} \\
-T(J_{\R}) \sm T(J_{\R}) & \simeq T(J_{\R}) \sm \Susp^\infty_+ BO & \text{(monoidality)} \\
-MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. & \text{(definition of $MO$)}
+T(\mu \circ (J_{\R} \times J_{\R})) & \simeq T(\mu \circ (J_{\R} \times J_{\R}) \circ \sigma) \tag{homotopy invariance} \\
+& \simeq T(J_{\R} \times 0) \tag{constructed lift} \\
+& \simeq T(J_{\R}) \sm T(0) \tag{monoidality} \\
+& \simeq T(J_{\R}) \sm \Susp^\infty_+ BO \tag{\Cref{TrivialBundleThomExample}} \\
+T(J_{\R}) \sm T(J_{\R}) & \simeq T(J_{\R}) \sm \Susp^\infty_+ BO \tag{monoidality} \\
+MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. \tag{definition of $MO$}
 \end{align*}
 The equivalence is one of $MO$--modules because the $MO$--module structure of both sides comes from smashing with $MO$ on the left.
 \end{proof}
@@ -141,8 +141,8 @@ E \sm T(\xi) \arrow{r}{\theta_E} & E \sm \Susp^\infty_+ X
 The bottom arrow $\theta_E$ exists by applying the action map to both sides and pushing the map $\theta_{MO} \sm E$ down.  Since $\theta_{MO}$ is an equivalence, it has an inverse $\alpha_{MO}$.  Therefore, the middle map has inverse $\alpha_{MO} \sm E$, and we can similarly push this down to a map $\alpha_E$, which we now want to show is the inverse to $\theta_E$.  From here it is a simple diagram chase: we have renamed three of the maps in the diagram to $f$, $g$, and $h$ for brevity.  Noting that $g \circ f$ is the identity map because of the unit axiom, we conclude
 \begin{align*}
 g \circ f & \simeq g \circ (\alpha_{MO} \sm E) \circ (\theta_{MO} \sm E) \circ f \\
-& \simeq \alpha_E \circ h \circ (\theta_{MO}\sm E) \circ f & \text{(action map)} \\
-& \simeq \alpha_E \circ \theta_E \circ g \circ f & \text{(action map)} \\
+& \simeq \alpha_E \circ h \circ (\theta_{MO}\sm E) \circ f \tag{action map} \\
+& \simeq \alpha_E \circ \theta_E \circ g \circ f \tag{action map} \\
 & \simeq \alpha_E \circ \theta_E.
 \end{align*}
 It follows that $\alpha_E$ gives an inverse to $\theta_E$.
@@ -159,9 +159,9 @@ There is also a cohomological version of the Thom isomorphism.  Suppose that $E$
 \begin{example}\label{HF2RPinftyExample}
 We will close out this section by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that $T(\L \downarrow \RP^n) = \RP^{n+1}$.  Because $MO$ is a connective spectrum, the truncation map \[MO \to MO(-\infty, 0] = H\pi_0 MO = \HFtwo\] is a map of ring spectra~\cite[Lemma II.2.12]{MayRingSpacesSpectra}.  Hence, we can apply the Thom isomorphism theorem to the mod--$2$ homology of Thom complexes coming from real vector bundles:
 \begin{align*}
-\pi_* (\HFtwo \sm T(\L - 1)) & \cong \pi_* (\HFtwo \sm T(0)) & \text{(Thom isomorphism)} \\
-\pi_* (\HFtwo \sm \Susp^{-1} \Susp^\infty \RP^{n+1}) & \cong \pi_* (\HFtwo \sm \Susp^\infty_+ \RP^n) & \text{(\Cref{RPnThomExample})} \\
-\widetilde{\HFtwo}_{*+1} \RP^{n+1} & \cong \HFtwo_* \RP^n. & \text{(generalized homology)}
+\pi_* (\HFtwo \sm T(\L - 1)) & \cong \pi_* (\HFtwo \sm T(0)) \tag{Thom isomorphism} \\
+\pi_* (\HFtwo \sm \Susp^{-1} \Susp^\infty \RP^{n+1}) & \cong \pi_* (\HFtwo \sm \Susp^\infty_+ \RP^n) \tag{\Cref{RPnThomExample}} \\
+\widetilde{\HFtwo}_{*+1} \RP^{n+1} & \cong \HFtwo_* \RP^n. \tag{generalized homology}
 \end{align*}
 This powers an induction that shows that $\HFtwo_* \RP^\infty$ has a single class in every degree.  The cohomological version of the Thom isomorphism in \Cref{CohomologicalThomIso}, together with the $\HFtwo^* \RP^n$--module structure of $\HFtwo^* T(\L-1)$, also gives the ring structure: \[\HFtwo^* \RP^n = \F_2[x] / x^{n+1}.\]
 \end{example}
@@ -360,10 +360,10 @@ Second, we want to identify the role of $\mathcal A_*$ in acting on $\HFtwo^* X$
 
 Having produced the action map $\alpha$, we are now moved to study $\alpha$ as well as the structure group $\Spec \mathcal A_*$ itself.  Milnor works out the Hopf algebra structure of $\mathcal A_*$ by defining elements $\xi_j \in \mathcal A_*$ dual to the \index{Milnor primitive}\textit{$j${\th} Milnor primitive}, which are defined by $Q_0 = \id$, by $Q_1 = \Sq^1$, and thereafter by the iterated commutator $Q_j = [Q_{j-1}, \Sq^{2^{j-1}}]$.  Taking $X = \RP^n$ and $x \in \HFtwo^1(\RP^n)$ the generator, he then observes two things: first, $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$, and second, any other admissible sequence of squares applied to $x$ vanishes for degree reasons.  It follows that $Q_j x = x^{2^j}$ is the only family of operators that act nontrivially on $x$, and from this we deduce the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in $\HFtwo^* \RP^n$)}.\]  Noticing that we can take the limit $n \to \infty$ to get a well-defined infinite sum, he then makes the following calculation, stable in $n$:
 \begin{align*}
-(\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coassociativity)} \\
+(\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) \tag{coassociativity} \\
 (\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = & \text{(ring homomorphism)} \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = & \text{(characteristic $2$)}. \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = \tag{ring homomorphism} \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \tag{characteristic $2$}. \\
 \intertext{Then, turning to the right-hand side:}
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
