--- a/sigma.tex
+++ b/sigma.tex
@@ -183,10 +183,10 @@ The Thom isomorphism $T\xi \sm T\xi \simeq T\xi \sm \Susp^\infty_+ G$ composes w
 
 \noindent Applying $\Spec E_0(-)$, the Thom diagonal is translated into the structure of a free and transitive action map \[\Spec E_0 T(\xi) \times \Spec E_0 G \to \Spec E_0 T(\xi).\]  This construction is natural in the formation of $G$ or $\xi$, and so we are also moved to specialize to the cases of $G = \Z \times BU$ and $G = BU$ and to understand $\Spec E_0 G$ in those contexts.  Again, this is a matter of chaining together results we have already proven:
 \begin{align*}
-\Spec E_0(\Z \times BU) & = D((\Z \times BU)_E) & \text{(\Cref{TopologicalCartierDuality})} \\
-& = D(\Div \CP^\infty_E) & \text{(\Cref{ECohomBUIsFree})} \\
-& = \InternalHom{FormalGroups}(\Div \CP^\infty_E, \Gm) & \text{(\Cref{DefnCartierDual})} \\
-& = \InternalHom{FormalSchemes}(\CP^\infty_E, \Gm), & \text{(\Cref{ProofOfFreeFormalMonoids})} \\
+\Spec E_0(\Z \times BU) & = D((\Z \times BU)_E) \tag{\Cref{TopologicalCartierDuality}} \\
+& = D(\Div \CP^\infty_E) \tag{\Cref{ECohomBUIsFree}} \\
+& = \InternalHom{FormalGroups}(\Div \CP^\infty_E, \Gm) \tag{\Cref{DefnCartierDual}} \\
+& = \InternalHom{FormalSchemes}(\CP^\infty_E, \Gm), \tag{\Cref{ProofOfFreeFormalMonoids}} \\
 \intertext{and similarly}
 \Spec E_0(BU) & = \InternalHom{FormalSchemes}_{*/}(\CP^\infty_E, \Gm)
 \end{align*}
@@ -330,10 +330,10 @@ There is an isomorphism \[\Spec E_0 BSU = \left\{\begin{array}{c} \text{function
 \begin{proof}
 Follow the sequence of isomorphisms
 \begin{align*}
-\Spec E_0 BSU & = D(BSU_E) & \text{(\Cref{TopologicalCartierDuality})} \\
-& = D(\SDiv_0 \CP^\infty_E) & \text{(\Cref{BSUtoBUtoCPinftyIsSexseq})} \\
-& = D(C_2 \CP^\infty_E) & \text{(\Cref{SDivModelsC2})} \\
-& = \InternalHom{FormalGroups}(C_2 \CP^\infty_E, \Gm), & \text{(\Cref{DefnCartierDual})}
+\Spec E_0 BSU & = D(BSU_E) \tag{\Cref{TopologicalCartierDuality}} \\
+& = D(\SDiv_0 \CP^\infty_E) \tag{\Cref{BSUtoBUtoCPinftyIsSexseq}} \\
+& = D(C_2 \CP^\infty_E) \tag{\Cref{SDivModelsC2}} \\
+& = \InternalHom{FormalGroups}(C_2 \CP^\infty_E, \Gm), \tag{\Cref{DefnCartierDual}}
 \end{align*}
 and then use the universal property in \Cref{DefinitionOfC2G}.
 \end{proof}
@@ -1471,9 +1471,9 @@ We address the claims in turn.
     \item This is a generic claim that does not rely on the height of $\G$.  The $2$--cocycle $c_{2^m}$ takes the form $c_{2^m}(x, y) = x^{2^{m-1}} y^{2^{m-1}}$, so that $f(x, -_{\G} x) = 1 + a x^{2^m} + \cdots$.  The expected value is $f(x, -_{\G} x) = 1$, hence $a = 0$.\footnote{One can show by almost identical calculation that $a = 0$ in this case if $2$ is invertible.}
     \item This is again an explicit calculation of the leading term.  Since $\G$ is of height $d$, it admits a coordinate where the negation series takes the form \[[-1]_{\G}(x) = -x + cx^{2^d} + \cdots\] for some $c$ not a zero divisor.  In the case that $n$ is as described, one can then calculate \[c_n(-_{\G} x, -_{\G} y) + c_n(x, y) = c_{n + (2^d-1)}(x, y) + \cdots,\] from which we make a trio of calculations:
     \begin{align*}
-    \lambda_2 f & = f^2, & \text{(uses $f \in \Sigma^2(\G; \Gm)$)} \\
-    \lambda_2 f & = 1 + ac_{n + (2^d-1)}(x, y) + \cdots, & \text{(above observation)} \\
-    f^2 & = 1 + a^2 c_{2n}(x, y) + \cdots. & \text{(characteristic $2$)}
+    \lambda_2 f & = f^2, \tag{uses $f \in \Sigma^2(\G; \Gm)$} \\
+    \lambda_2 f & = 1 + ac_{n + (2^d-1)}(x, y) + \cdots, \tag{above observation} \\
+    f^2 & = 1 + a^2 c_{2n}(x, y) + \cdots. \tag{characteristic $2$}
     \end{align*}
     For $n \ge 2^d$, this forces $a = 0$.
     \item In the case $d = 2$ of the previous statement, this leaves one case open: $n = 3$.  Equating the two sides then gives $a^2 = a$.
