change section title again

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -262,7 +262,7 @@ Tilman Bauer has studied some of the algebraic geometry associated to unstable c
 
 
 
-\section{The algebra of mixed unstable cooperations}\label{UnstableAlgebraicModelSection}
+\section{Algebraic mixed unstable cooperations}\label{UnstableAlgebraicModelSection}
 
 For simplicity, we return to the stable setting of \Cref{StableContextLecture} for a moment.  For an arbitrary spectrum $X$ and ring spectrum $E$, the completion $X^\wedge_E$ is typically a quite poor approximation to $X$ itself.  Though this can be partially mediated by placing hypotheses on $X$, the approximation can always be improved by ``enlarging'' the cohomology theory involved---namely, selecting a second ring spectrum $F$ and forming the completion $X^\wedge_{E \vee F}$ at the wedge.  This has the following factorization property
 \begin{center}
