change name of 3.6

--- a/finite.tex
+++ b/finite.tex
@@ -1140,7 +1140,7 @@ They therefore conclude the strongest possible positive response to Ravenel's co
 
 
 
-\section{Chromatic disassembly}\label{ChromaticLocalizationSection}
+\section{Chromatic fracture and convergence}\label{ChromaticLocalizationSection}
 
 In this Lecture, we will couple the ideas of \Cref{StableContextLecture} to the homology theories and structure theorems described in \Cref{NilpotenceAndPeriodicity}.  In particular, we have not yet exhausted \Cref{ThickSubcatClassification}, and for inspiration about how to utilize it, we will begin with an algebraic analogue of the situation considered thus far.
 
